--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,52 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./sass/style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="../sass/style.css" />
+    <title>carrito</title>
 </head>
 
 <body>
-    <article class="grids">
+    <article class="grids_carrito">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light flex-nowrap">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="./index.html"><img src="./img/logoKaru.png" alt="karuLogo"
+                    <a class="navbar-brand" href="../index.html"><img src="../img/logoKaru.png" alt="karuLogo"
                             width="80" height="80" class="d-inline-block align-text-top header__Logo"></a>
                     <p class="titulo_nav">Karu
                     </p>
-                    <a class="navbar-brand" href="./pages/carrito.html  "><img src="./img/carritoLogo.png"
+                    <a class="navbar-brand" href="./carrito.html  "><img src="../img/carritoLogo.png"
                             alt="logoCarrito" width="80" height="80" class="d-inline-block align-text-top "></a>
                 </div>
             </nav>
         </header>
         <div class="grid1">
-            <h1 class="titulos_h1">Arma tu pedido!</h1>
+            <h1 class="titulos_h1">CARRITO</h1>
         </div>
-        <main>
-            <aside class="grid2">
-                <form class="filtro">
-                    <input type="text" id="nombre" placeholder="Escribe que buscas!" />
-                    <input type="button" id="boton_buscar" value="Buscar">
-                    <p>Precios entre</p>
-                    <div class="rango_precio" id="rango">
-                        <input type="text" id="minimo" placeholder="minimo" value=0 />
-                        <span>--</span>
-                        <input type="text" id="maximo" placeholder="maximo" value=100000 /></div>
-                    <span id="error_rango" class="error_rango"></span>
-                </form>
-            </aside>
-            <div class="contenedor_prod">
-                <div id="contenedor" class="grid3"></div>
+        <main class="grid_carro">
+            <div class="carrito" id="carrito">
+                <div class="titulosCarrito">
+                    <p class="tituloImagen">Imagen</p>
+                    <p class="tituloDesc">Descripcion</p>
+                    <p class="tituloPrecio">Precio</p>
+                    <p class="tituloCant">Cant</p>
+                    <p class="tituloTotal">Total</p>
+                </div>
+
             </div>
+
+
         </main>
         <span id="alerta" class="alertaBorrar"></span>
         <footer>
             <div class="redes">
-                <a href="" target="_blank"><img src="./images/icono_facebook.svg"
+                <a href="" target="_blank"><img src="../images/icono_facebook.svg"
                         alt="Link a Facebook"></a>
                 <a href="" target="_blank"><img
-                        src="./images/icono_instagram.svg" alt="Link a Instagram"></a>
-                <a href="" target="_blank"><img src="./images/icono_twitter.svg"
+                        src="../images/icono_instagram.svg" alt="Link a Instagram"></a>
+                <a href="" target="_blank"><img src="../images/icono_twitter.svg"
                         alt="Link a Twitter"></a>
             </div>
         </footer>
@@ -60,7 +57,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script src="./js/main.js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 
 </html>
